syntax = "proto3";

package scoring;

// Interface exported by the server.
service Scoring {
  // A simple RPC.
  //
  // GetScore returns the list of tags for a particular taskthe matching between a given set of applicants and a given mission.
  rpc GetScore(GetScoreRequest) returns (GetScoreResponse) {}
}

message GetScoreRequest {
  string taskId = 1;
  message Applicant {
    string siderID = 1;
    repeated string tags =2;
  }
  repeated Applicant applicants = 2;
}

message GetScoreResponse {
  message Applicant{
    string siderID = 1;
    int32 score = 2;
  }
  repeated Applicant scores = 1;
  repeated string tags = 2;
}